# link_saver_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  grafana-dashboard.json  link_saver_api.code-workspace  prometheus.yml  requirements.txt  script.sh  sql_app.db
link_api/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  start.sh
link_api/app/: dependencies.py  exceptions.py  main.py  root.py
link_api/app/admin/: auth.py  views.py
link_api/app/api/routers/: auth.py  collection.py  link.py  root.py
link_api/app/api/schemas/: collection.py  link.py  relations.py  token.py  user.py
link_api/app/auth/: auth.py  dependencie.py  dependencies.py  exception.py  exceptions.py  model.py  models.py  router.py  routers.py  schema.py  schemas.py  service.py  services.py  tasks.py  utils.py
link_api/app/base/: mappers.py  repository.py
link_api/app/collection/: admin.py  dependencies.py  entities.py  entity.py  mappers.py  model.py  models.py  repositories.py  repository.py  router.py  routers.py  routes.py  schema.py  schemas.py  service.py  services.py
link_api/app/common/: email.py  mapper.py  mappers.py  model.py
link_api/app/config/: database.py  migrations.py  project_config.py
link_api/app/core/: __init__.py  config.py  constants.py  database.py  dependecies.py  exceptions.py  lifespan.py  logging.py  mappers.py  repositories.py  taskiq_broker.py  types.py  unit_of_work.py
link_api/app/db/models/: collection.py  link.py  token.py  user.py
link_api/app/db/repositories/: collection.py  link.py  user.py
link_api/app/link/: admin.py  dependencies.py  entities.py  entity.py  enums.py  mappers.py  model.py  models.py  repositories.py  repository.py  router.py  routers.py  routes.py  schema.py  schemas.py  service.py  services.py  tasks.py
link_api/app/link/utils/: async_link_parser.py  data.json  (+1 more)
link_api/app/services/: auth.py  base.py  collection.py  link.py
link_api/app/user/: admin.py  dependencies.py  entities.py  entity.py  exception.py  exceptions.py  mappers.py  models.py  repositories.py  repository.py  routers.py  schema.py  schemas.py
link_api/app/utils/: async_link_parser.py  security.py
link_api/migrations/: env.py
link_api/migrations/versions/: 1e37ed627f0f_initial_migration.py
link_api/tests/: conftest.py
link_api/tests/mock_data/: mock_collections.json  mock_link_collection.json  mock_links.json  mock_users.json
(+45 files in other folders)
