[project]
name = "link-api"
version = "0.1.0"
description = ""
authors = [
    {name = "andreychvankov",email = "whitebear134@gmail.com"}
]
requires-python = "~3.13"
dependencies = [
    "fastapi (>=0.128.7,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "sqladmin (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
